# homework_cta-congestion-monitoring

./: .gitignore  .pre-commit-config.yaml  Makefile  Makefile copy  README.md  ingest_CTALStops.py  pyproject.toml  run.bash  testCTAIngest.py
apps/: ingest_CTAAlerts.py  ingest_CTALStops.py  ingest_CTARoutesAlerts.py
apps/ingest/route_alerts/: Dockerfile
apps/l_route_alerts/: app.py  ingest.py  upload.py
apps/l_station_alerts/: app.py
apps/l_stops/: app.py  ingest_CTALStops.py
apps/l_train_locations/: app.py
apps/middleware/: app.py
apps/middleware/web/: code.js  index.html  style.css
apps/middleware/web2/: homepage.html  script.js  station.html  style.css
apps/web/: code.js  index.html
cta/api/: alert.py  system.py  train.py
cta/api/builders/: alert.py  bus.py  train.py
cta/api/directors/: alert.py  train.py
cta/builders/: train.py
cta/mongodb/: __init__.py
cta2json/: pyproject.toml
cta_api/: __init__.py  alert.py
cta_api/builders/: __init__.py  alert.py  bus.py
cta_api/directors/: alert.py
docs/adr/: ADR_0_use-mongodb-as-the-backend-database-for-the-application.md  ADR_1_use-json-schema-to-validate-json-data.md  ADR_2_have-subsystem-to-populate-database-with-l-stops.md  ADR_3_create-a-seperate-cta-to-json-service.md  ADR_4_have-code-to-load-json-into-mongodb.md  ADR_5_use-a-builder-pattern-to-construct-api-url-endpoints.md
ingest/: Dockerfile  Makefile  getCTAAlerts.py  ingest_CTAAlerts.py  main.py  pyproject.toml  run.bash
ingest/cta/: README.md  __init__.py  alert.py  system.py
ingest/cta/builders/: __init__.py  alert.py  bus.py
ingest/cta/directors/: alert.py
ingest/tests/: test_builders.py
injest/: pyproject.toml
injest/cta/: train.py
injest/cta/builders/: bus.py  train.py
injest/cta/cta2json/: README.md  main.py  pyproject.toml
injest/cta/train/: main.py
injest/cta/trains/: main.py
mdb_handler/: __init__.py
src/: ingest_CTAAlerts.py  ingest_CTALStops.py  run.bash
src.old/: cronjob
src.old/cta2json/: main.py
src.old/upload/: README.md
src/UI/: homepage.css  homepage.html  homepage.js  station.html
src/app2/: README.md  db.py  main.py  schema.py
src/applicationOne/: fetch_APIdata.py  server.js
src/arrivals/: README.md  main.py
src/common/: README.md  __init__.py  schemas.py
src/cta/: alert.py  main.py
src/cta/builders/: alert.py
src/cta/directors/: alert.py
src/cta2json/: README.md  main.py  pyproject.toml
src/cta_handler/: fetch_APIdata.py  main.py
src/db_uploader/: main.py
src/json2MongoDB/: Makefile  README.md  db.py  main.py  pyproject.toml
src/l-stop_handler/: __init__.py  main.py
src/l_stop_handler/: main.py
src/stops/: README.md  main.py
src/tests/: test_builders.py
tests/testbuilders/: test_alert.py  test_train.py
tests/testdirectors/: test_alert.py  test_train.py
upload/: Makefile  pyproject.toml
