[tool.poetry]
name = "db"
version = "0.0.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg = {version = "^3.2.3", extras = ["binary"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
