[tool.poetry]
name = "json2MongoDB"
version = "0.0.1"
description = "JSON to MongoDB arrivals Collection"
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
progress = "^1.6"
pymongo = {version = "^4.10.1", extras = ["oscp"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
