[tool.poetry]
name = "cta2json"
version = "0.0.1"
description = "CTA REST API Arrivals to JSON"
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pandas = "^2.2.3"
progress = "^1.6"
cta = {git = "https://github.com/NicholasSynovic/tool_cta-python-api", rev = "0.0.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
